public interface Solvable {
    boolean isSolved();
    String getHint();

}
