package com.example.escaperoombusinesssystem;
import javafx.stage.Stage;

import java.util.*;

import static com.example.escaperoombusinesssystem.BookingStatus.CANCELLED;
import static com.example.escaperoombusinesssystem.BookingStatus.CONFIRMED;

public class Admin extends User {

    public Admin(String username , String plainTextPassword) {
        super(username , "Admin" , plainTextPassword);
    }

   public Report generateReport() {
       Map<String, Object> reportData = new HashMap<>();

       // Calculate basic statistics
       int totalBookings = 0;
       int confirmedBookings = 0;
       int cancelledBookings = 0;
       List<EscapeRoom> allRooms = Business.getRooms(); // Get all escape rooms from the Business class

       if (allRooms == null || allRooms.isEmpty()) {
           reportData.put("error", "No rooms available");
           return new Report(reportData);
       }

       for (EscapeRoom room : allRooms) {
           if (room.getBookings() == null) continue; // Skip null bookings
           totalBookings += room.getBookings().size();
           for (Booking booking : room.getBookings()) {
               BookingStatus status = booking.getStatus();
               if (CONFIRMED.equals(status)) {
                   confirmedBookings++;
               } else if (CANCELLED.equals(status)) {
                   cancelledBookings++;
               }
           }
       }

// Insertion Sort implementation for sorting rooms by popularity
       for (int i = 1; i < allRooms.size(); i++) { // Start from the 2nd element (index 1)
           EscapeRoom key = allRooms.get(i); // Current room to be placed in the correct position
           int j = i - 1; // Start comparing with the previous room (sorted part of the list)

           // Shift elements of the sorted section to the right until the correct position for 'key' is found
           while (j >= 0 && allRooms.get(j).getBookings().size() < key.getBookings().size()) {
               // Move the room with fewer bookings to the right
               allRooms.set(j + 1, allRooms.get(j));
               j--; // Move left to check the next room in the sorted section
           }

           // Place 'key' in its correct position (now the list is sorted up to index i)
           allRooms.set(j + 1, key);
       }

       // Add core data to the map
       reportData.put("totalBookings", totalBookings);
       reportData.put("confirmedBookings", confirmedBookings);
       reportData.put("cancelledBookings", cancelledBookings);
       reportData.put(
               "popularRooms",                     // Key for the report data map
               allRooms.subList(0, Math.min(3, allRooms.size()))  // Value: Top 3 rooms (or fewer if the list is small)
               // =============================================
               // 1. `Math.min(3, allRooms.size())` ensures we never exceed the list's bounds.
               //    - If `allRooms` has 2 rooms, it returns 2.
               //    - If `allRooms` has 5 rooms, it returns 3.
               // 2. `subList(0, X)` extracts the first X rooms (already sorted by popularity).
               //    - Safely avoids `IndexOutOfBoundsException`.
       );

       // Create the report
       Report report = new Report(reportData);
       report.addData("notes", "Report generated by " + username);

       return report;
   }

    public void addRoom(EscapeRoom room) throws Exception {
        if (room == null) {
            throw new IllegalArgumentException("Room cannot be null!");
        }
        if (Business.getRooms().contains(room)) {
            throw new IllegalStateException("Room '" + room.getName() + "' already exists!");
        }
        Business.addRoom(room);
    }

    public void deactivateRoom(EscapeRoom room) {
        if (room == null) throw new IllegalArgumentException("Room cannot be null!");
        room.deactivate();
        System.out.println("Room '" + room.getName() + "' deactivated.");
    }

    @Override
    public void accessDashboard() {

    }
}
