package com.example.escaperoombusinesssystem;



public enum BookingStatus {
    CONFIRMED,
    CANCELLED
}
